# UnitConverter_07

./: .clangd  .cursorrules  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  UnitConverter.cpp  claude_commands.md  workbook.md
Prompting/: red_02_테스트플랜.md  spec-prompt.md
Report/: 2605211_UnitConverter_C++_Final_Report.md  README.md
Report/spec/: 00.report-toc.md  01.problem-definition.md  02.mom-test-interview.md  03.bce-dual-track-design.md  04.catch2-red-test-catalog.md  05.phase4-requirements-package.md  06.user-journey-storyboard.md  07.gherkin-eight-scenarios.md  08.level5-completeness-checklist.md  09.prd-readme-gap-analysis.md  10.story-todo-traceability.md  11.cursorrules-review.md
boundary/: CliApp.cpp  CliApp.h  ConversionService.cpp  ConversionService.h  InputParser.cpp  InputParser.h
data/: JsonUnitDefinitionReader.cpp  JsonUnitDefinitionReader.h
docs/: PRD.md  TODO.md  defect_list.md  refactoring_plan.md  requirements.md  test_plan.md
entity/: ILengthConverter.h  LengthConverter.cpp  LengthConverter.h  UnitRegistry.cpp  UnitRegistry.h
tests/: golden_master_expected.txt  test_boundary.cpp  test_data.cpp  test_domain.cpp  test_golden_master.cpp
tests/fixtures/: custom_config.json  malformed_config.json  negative_ratio_config.json  valid_config.json
tests/mocks/: MockLengthConverter.h
